# agent-trace

./: .gitignore  Cargo.toml  README.md  install.sh  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: api.rs  cost.rs  main.rs  parser.rs  state.rs  watcher.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css  types.ts
ui/src/components/: DetailPanel.tsx  SessionList.tsx  Timeline.tsx
ui/src/hooks/: useSessions.ts  useTrace.ts
ui/src/lib/: trace-ui.test.ts  trace-ui.ts
ui/src/theme/: gruvbox.css
