[package]
name = "agent-trace"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-trace"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
httparse = "1"
tokio-tungstenite = "0.24"
